<resources>
    <string name="app_name">술깃한제안</string>
    <string name="NAVER_OAUTH_CLIENT_ID">DRDFhbrUsZm1jyhY6jfX</string>
    <string name="NAVER_OAUTH_CLIENT_SECRET">vU2EbZkcKG</string>
    <string name="NAVER_OAUTH_CLIENT_NAME">술깃한제안</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="service_permission_title">술깃한제안 앱 서비스 이용권한 안내</string>
    <string name="login_agree">로그인 시 개인정보처리방침 및 위치기반서비스 이용약관에 동의하신 것으로 간주됩니다.</string>
    <string name="service_permission_confirm">확인</string>
    <string name="sex_explain_text">성별을 선택해주세요.</string>
    <string name="sex_explain_sub_text">적합한 점포를 추천 드릴게요</string>
    <string name="sex_man">남성</string>
    <string name="sex_woman">여성</string>
    <string name="sex_confirm">다음</string>
    <string name="age_explain_text">나이를 선택해주세요.</string>
    <string name="age_confirm">확인</string>
    <string name="main_home">홈</string>
    <string name="main_area">지역/종류</string>
    <string name="main_map">내주변</string>
    <string name="main_theme">테마</string>
    <string name="main_my">MY</string>
    <string name="area_zone">지역</string>
    <string name="area_free">무료</string>
    <string name="my_money">지금까지 절약한 금액은\n5,000원 입니다.</string>
    <string name="my_etc_notice">공지사항</string>
    <string name="my_etc_history">이용내역</string>
    <string name="my_etc_regular">단골매장</string>
    <string name="my_etc_service_center">고객센터 문의하기</string>
    <string name="my_etc_setting">환경설정</string>
    <string name="search_recent">최근 검색어</string>
    <string name="search_popular">인기 검색어</string>
    <string name="home_my_location">내 위치 지정</string>
    <string name="home_my_location_current">현위치로 재검색</string>
    <string name="home_my_location_map">지도로 위치지정</string>
    <string name="current_location_complete">완료</string>
    <string name="store_inform">정보</string>
    <string name="store_confirm">서비스 이용하기</string>
    <string name="store_service">서비스를 선택해주세요.</string>
    <string name="notice_notice">공지사항</string>
    <string name="history_history">이용내역</string>
    <string name="kakao_use">카카오톡으로 이용하기</string>
    <string name="naver_use">네이버로 이용하기</string>
    <string name="google_use">Google로 이용하기</string>
    <string name="my_etc_profile">매일매일 새로운 경험, 술깃한제안</string>
    <string name="filter_filter">필터</string>
    <string name="filter_sort">정렬</string>
    <string name="filter_theme">테마</string>
    <string name="filter_category">종류</string>
    <string name="filter_apply">필터 적용</string>
    <string name="dialog_share_title">친구에게 알리기\n이 정보를 주변 지인들에게 공유하세요.</string>
    <string name="dialog_share_kakao">카카오톡으로 보내기</string>
    <string name="dialog_share_sms">문자 메세지로 보내기</string>
    <string name="dialog_share_cancel">취소</string>
    <string name="filter_theme_choice">개 선택</string>
    <string name="map_refresh">화면 내 재검색</string>
    <string name="app_privacy">개인정보처리방침</string>
    <string name="app_intro">술깃한제안 제휴 문의 혹은 서비스 이용관련 문의가 있으시면 아래로 문의주세요.\n\n이메일 | soolgit@gmail.com\n카카오톡 플러스친구 | 술깃한제안\n\n블랙스톤 Co. 대표 정규열\n사업자등록번호 : 407-10-68331\n주소 : 인천광역시 연수구 송도1동 갯벌로 12, 미추홀타워 11층</string>
    <string name="service_complete_title">서비스 이용 완료</string>
    <string name="service_complete_content">오늘은 이미 서비스를 이용하셨네요. 내일 다시 이용해주세요.</string>
    <string name="setting_push">푸쉬 알림 받지 않기</string>
    <string name="setting_privacy">개인정보 취급방침</string>
    <string name="setting_gps">위치기반서비스 이용약관</string>
    <string name="setting_license">오픈소스 라이선스</string>
    <string name="setting_logout">로그아웃</string>

</resources>
