<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/age_explain_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        app:layout_constraintVertical_bias="0.16"
        android:textColor="@color/black_four"
        fontPath="scdream8.otf"
        android:text="@string/age_explain_text"
        android:layout_marginLeft="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/age_explain_sub_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        app:layout_constraintVertical_bias="0.22"
        android:textColor="@color/brownish_grey_two"
        fontPath="notosanskr_medium_hestia.otf"
        android:text="@string/sex_explain_sub_text"
        android:layout_marginLeft="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/age_date_picker"
        android:layout_width="0dp"
        android:layout_height="305dp"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="46dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56"
        tools:listitem="@layout/util_age_recyclerview_row" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:adjustViewBounds="true"
        android:src="@drawable/border_2dp_yellow"
        app:layout_constraintBottom_toBottomOf="@+id/age_date_picker"
        app:layout_constraintLeft_toLeftOf="@+id/age_date_picker"
        app:layout_constraintRight_toRightOf="@+id/age_date_picker"
        app:layout_constraintTop_toTopOf="@+id/age_date_picker"/>

    <Button
        android:id="@+id/age_confirm_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/marigold"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:text="@string/age_confirm"
        app:layout_constraintDimensionRatio="360:54"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>