<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_round_10dp">

    <TextView
        android:id="@+id/home_dialog_my_location_textview"
        fontPath="scdream7.otf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/home_my_location"
        android:textColor="@color/black_four"
        android:textSize="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/home_dialog_current_location_imagebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/current_location"
        app:layout_constraintBottom_toTopOf="@+id/home_dialog_current_location_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/home_dialog_map_location_imagebutton"
        app:layout_constraintTop_toBottomOf="@+id/home_dialog_my_location_textview" />

    <ImageButton
        android:id="@+id/home_dialog_map_location_imagebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/map_location"
        app:layout_constraintBottom_toTopOf="@+id/home_dialog_map_location_textview"
        app:layout_constraintLeft_toRightOf="@+id/home_dialog_current_location_imagebutton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_dialog_my_location_textview" />

    <TextView
        android:id="@+id/home_dialog_current_location_textview"
        fontPath="notosanskr_medium_hestia.otf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_my_location_current"
        android:textColor="@color/brownish_grey_two"
        android:textSize="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/home_dialog_current_location_imagebutton"
        app:layout_constraintRight_toRightOf="@+id/home_dialog_current_location_imagebutton"
        app:layout_constraintTop_toBottomOf="@+id/home_dialog_current_location_imagebutton" />

    <TextView
        android:id="@+id/home_dialog_map_location_textview"
        fontPath="notosanskr_medium_hestia.otf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_my_location_map"
        android:textColor="@color/brownish_grey_two"
        android:textSize="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/home_dialog_map_location_imagebutton"
        app:layout_constraintRight_toRightOf="@+id/home_dialog_map_location_imagebutton"
        app:layout_constraintTop_toBottomOf="@+id/home_dialog_map_location_imagebutton" />

</android.support.constraint.ConstraintLayout>
