<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/very_light_pink">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/main_my_content_header_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/background_gradation_red"
            app:layout_constraintDimensionRatio="360:158"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:lineSpacingExtra="6dp"
                android:lines="2"
                android:text="@string/my_money"
                android:textColor="@color/white"
                android:textSize="21dp"
                fontPath="scdream8.otf"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/main_my_content_info_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            android:paddingLeft="32dp"
            android:paddingRight="44dp"
            app:layout_constraintDimensionRatio="360:117"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_my_content_header_container">

            <TextView
                android:id="@+id/main_my_content_info_name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="김술깃"
                fontPath="scdream6.otf"
                android:textColor="@color/total_black"
                android:textSize="22dp"
                app:layout_constraintBottom_toTopOf="@+id/main_my_content_info_email_textview"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/main_my_content_info_email_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="iloveui@naver.com"
                android:textColor="@color/total_black"
                fontPath="notosanskr_regular_hestia.otf"
                android:textSize="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_my_content_info_name_textview" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/woman_profile"
                app:layout_constraintBottom_toBottomOf="@+id/main_my_content_info_email_textview"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/main_my_content_info_name_textview" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/main_my_content_etc_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:paddingTop="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingBottom="17dp"
            app:layout_constraintTop_toBottomOf="@+id/main_my_content_info_container">

            <TextView
                android:id="@+id/main_my_content_etc_notice_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="36dp"
                android:paddingTop="17dp"
                android:paddingBottom="17dp"
                android:text="@string/my_etc_notice"
                android:textColor="@color/black"
                android:textSize="14dp"
                fontPath="notosanskr_bold_hestia.otf"
                app:layout_constraintLeft_toLeftOf="parent"
                android:drawableRight="@drawable/oval"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/main_my_content_etc_history_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="36dp"
                android:paddingTop="17dp"
                android:paddingBottom="17dp"
                android:text="@string/my_etc_history"
                android:textColor="@color/black"
                android:textSize="14dp"
                fontPath="notosanskr_bold_hestia.otf"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_my_content_etc_notice_textview" />

            <TextView
                android:id="@+id/main_my_content_etc_regular_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="36dp"
                android:paddingTop="17dp"
                android:paddingBottom="17dp"
                android:text="@string/my_etc_regular"
                android:textColor="@color/black"
                android:textSize="14dp"
                fontPath="notosanskr_bold_hestia.otf"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_my_content_etc_history_textview" />

            <TextView
                android:id="@+id/main_my_content_etc_service_center_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="36dp"
                android:paddingTop="17dp"
                android:paddingBottom="17dp"
                android:text="@string/my_etc_service_center"
                android:textColor="@color/black"
                android:textSize="14dp"
                fontPath="notosanskr_bold_hestia.otf"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_my_content_etc_regular_textview" />

            <TextView
                android:id="@+id/main_my_content_etc_setting_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="36dp"
                android:paddingTop="17dp"
                android:paddingBottom="17dp"
                android:text="@string/my_etc_setting"
                android:textColor="@color/black"
                android:textSize="14dp"
                fontPath="notosanskr_bold_hestia.otf"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_my_content_etc_service_center_textview" />

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>